--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -188,14 +188,14 @@
                         style='padding-top: 50px;'>Home & Hotel Room Massage by Sensational Outcall Massage</h1>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Sensational outcall massage/home massage and spa is serving community from more than 5 years.our
+                        Sensational outcall massage and home massage is serving community from more than 5 years.our
                         motto is to provide
                         authentic services to customer at their doorstep.our trained and professional therapist makes
                         complete relaxation to customers in their own room.our lady use with authentic , herbal and skin
                         friendly massage oil for therapy.our services makes complete satisfaction to customers.
                     </p>
                     <h2 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>BENEFITS OF OUTCALL MASSAGE SERVICES</h2>
+                        style='padding-top: 50px;'>BENEFITS OF Hotel MASSAGE SERVICES</h2>
 
 
                     <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
@@ -224,8 +224,8 @@
                         massage at your doorstep.
                     </p>
 
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">As lady arrive your hotel you may be required to confirm the lady arrival with reception. As massage complete u have to approve hotel for lady ID card to be returned to her upon leaving the hotel.
-                        Now no need to go out & make yourself tired. Book us and make your time more special with our lady in your own hotel room.</p>
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">As lady arrive your hotel you may be required to confirm the girls arrival with reception.As massage complete u have to approve hotel for lady ID card to be returned to her upon leaving the hotel. 
+                        Book us and make your time more special & enjoy the best massage by our lady in your own hotel room.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Thank you for choosing us.
                         Sensational outcall massage by may
