--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -185,7 +185,7 @@
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-1">
                     <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>Home & Hotel Room Massage by Sensational Outcall Massage PATTAYA</h1>
+                        style='padding-top: 50px;'>Hotel Room Massage by Sensational Outcall Massage PATTAYA</h1>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Sensational outcall massage and home massage is serving community from more than 5 years.our
