--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -228,8 +228,8 @@
                         Book us and make your time more special & enjoy the best massage by our lady in your own hotel room.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Thank you for choosing us.
-                        Sensational outcall massage by may
-                        Best outcall massage services in pattaya</p>
+                        Sensational outcall massage pattaya by may,
+                        Best outcall massage services </p>
 
 
                     <h2 class="font-family-alt font-weight-700 text-uppercase xs-title-small title-medium "
