--- a/contact.html
+++ b/contact.html
@@ -232,8 +232,8 @@
                                 <i class="fa fa-envelope-o opacity-6 text-gray title-extra-large"></i>
                                 <p
                                     class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                    General Enqueries<br><a href='emailto:homespaptt@gmail.com'
-                                        style='color: #000'>homespaptt@gmail.com</a></p>
+                                    General Enqueries<br><a href='emailto:booking@outcallmassagespattaya.com'
+                                        style='color: #000'>booking@outcallmassagespattaya.com</a></p>
                             </div>
                             <!-- //.xs-margin-7 -->
                         </div>
