--- a/contact.html
+++ b/contact.html
@@ -256,39 +256,38 @@
                 <!-- //.col-md-8 -->
             </div>
             <!-- //.row -->
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <form action="POST" method="post" data-netlify='true'>
+            <div class="row">
+                <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
+                    <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
+                    <input type="text" placeholder="* Your Email" name="email" id="email" class="required email"
+                        required>
+                    <input type="text" placeholder="Your Phone" name="phone" id="phone" class="number">
+                </div>
+                <!-- //.col-sm-6 -->
+
+                <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
+                    <textarea placeholder="* Your Message" name="message" id="message" class="required"
+                        required></textarea>
+                </div>
+                <!-- //.col-sm-6 -->
+            </div>
+            <!-- //.row -->
 
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <form action="contact/send_mail.php" method="post" id="form-contact">
-                        <div class="row">
-                            <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
-                                <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
-                                <input type="text" placeholder="* Your Email" name="email" id="email"
-                                    class="required email">
-                                <input type="text" placeholder="Your Phone" name="phone" id="phone" class="number">
-                            </div>
-                            <!-- //.col-sm-6 -->
-
-                            <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
-                                <textarea placeholder="* Your Message" name="message" id="message"
-                                    class="required"></textarea>
-                            </div>
-                            <!-- //.col-sm-6 -->
-                        </div>
-                        <!-- //.row -->
-
-                        <div class="row">
-                            <div class="col-sm-6 col-sm-offset-6">
-                                <button id="btn-form-contact" type="submit"
-                                    class="btn btn-color-black btn-hover-transparent btn-medium">Send Message</button>
-                            </div>
-                            <!-- //.col-sm-6 -->
-                        </div>
-                        <!-- //.row -->
-                    </form>
+                <div class="col-sm-6 col-sm-offset-6">
+                    <button id="btn-form-contact" type="submit"
+                        class="btn btn-color-black btn-hover-transparent btn-medium">Send Message</button>
                 </div>
-                <!-- //.col-md-10 -->
+                <!-- //.col-sm-6 -->
             </div>
+            <!-- //.row -->
+        </form>
+    </div>
+    <!-- //.col-md-10 -->
+</div>
             <!-- //.row -->
         </div>
         <br>
