added overlay in image

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </nav>
     <!-- //Navigation End -->
 
-    <section style="background: url('/assets/images/mayspa.jpg');
+    <section style="background: url('/assets/images/bannerimg.png');
     background-size: cover; background-repeat: no-repeat;
     "
         class="height-100 no-padding overflow-hidden width-100 ">
