--- a/gallery.html
+++ b/gallery.html
@@ -8,9 +8,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best and Authentic Thai Massage | Sensational home spa - By may</title>
+    <title>Gallery</title>
     <meta name="description"
-        content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
+        content="Sensational Outcall Massage Pattaya">
     <meta name="keywords" content="authentic thai massage, best thai massage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
