--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                             <i class="fa fa-envelope-o opacity-6 text-gray title-extra-large"></i>
                             <p
                                 class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                General Enqueries<br><a href='emailto:booking@outcallmassagespattaya.com'
+                                General Enqueries<br><a href="mailto:booking@outcallmassagespattaya.com"
                                     style='color: #000'>booking@outcallmassagespattaya.com</a></p>
                         </div>
                         <!-- //.xs-margin-7 -->
