--- a/services.html
+++ b/services.html
@@ -367,8 +367,8 @@
                                     class="fa fa-star final-star"></i></div>
                             <p class="aggRatings" style="
                 text-align: center;
-            ">Rated <span itemprop="ratingValue">4.8</span>/<span itemprop="bestRating">5</span> Based on <span
-                                    itemprop="reviewCount">250</span> Verified Ratings</p>
+            ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span
+                                    itemprop="reviewCount"></span> Verified Ratings</p>
                             <meta itemprop="worstRating" content="1">
                         </div>
                     </div>
