--- a/services.html
+++ b/services.html
@@ -391,7 +391,7 @@
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
                         <img src="assets/images/logo/black-one.png" class='img-fluid' alt="spa_logo"
-                            style="width: 50px;">
+                            style="height: 80px">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
