--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -280,7 +280,7 @@
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
                         <img src="assets/images/logo/black-one.png" class='img-fluid'
-                            alt="Best deeptissue massages in pattaya" style="width: 50px;">
+                            alt="Best deeptissue massages in pattaya" style="height: 80px">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
