--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -298,7 +298,7 @@
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
                         <img src="assets/images/logo/black-one.png" class='img-fluid'
-                            alt="Hotel room massage in pattaya" style="width: 50px;">
+                            alt="Hotel room massage in pattaya" style="height: 80px">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
