--- a/gallery.html
+++ b/gallery.html
@@ -155,9 +155,9 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/mayspadull.png" alt="logo"
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg" alt="logo"
                             style='height: 55px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/mayspadull.png" alt="logo"
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg" alt="logo"
                             style='height: 80px'>
                     </a>
                 </div>
