--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -66,7 +66,7 @@
 
     </script>
     <!-- Loading Bootstrap CSS -->
-    <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/png">
 
 
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
