--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </script>
 
     <!-- Loading Bootstrap CSS -->
-    <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
     <link async href="assets\dist\root.css" rel="stylesheet" type="text/css">
