--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
     </script>
 
     <!-- Loading Bootstrap CSS -->
-    <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/png">
 
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
