--- a/services.html
+++ b/services.html
@@ -187,7 +187,7 @@
                         </i>
                     </h2>
 
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Sensational outcall massage pattaya offers you best massage therapist in pattaya.our all therapist are having minimum experience of 3 years in different types of massages.we offer you beautiful & trained massage therapist who provide you best massage in pattaya at a comfort of your own hotel room or home.our therapist are ready to serve you 24 hours available through-out pattaya city and near by areas.</p>
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Sensational outcall massage pattaya offers you best massage therapist in pattaya.our all therapist are having minimum experience of 3 years in different types of massages.we offer you beautiful & trained massage therapist who provide you best massage in pattaya at a comfort of your own hotel room or home. Our therapist are ready to serve you 24 hours at your own place.our services available through-out pattaya city and near by areas.stay at your comfort zone and book the best massage theapist near you.</p>
                     <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
                         <b>Types of avaliable expert outcall massage services -</b>
