--- a/services.html
+++ b/services.html
@@ -374,7 +374,7 @@
                             <p class="aggRatings" style="
                 text-align: center;
             ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span
-                                    itemprop="reviewCount"></span> Verified Ratings</p>
+                                    itemprop="reviewCount">74</span> Verified Ratings</p>
                             <meta itemprop="worstRating" content="1">
                         </div>
                     </div>
