--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
         }
 
         .spaimg {
-            width: 40%;
-            margin-top: 80px;
+            width: 16%;
+    margin-top: 130px;
+    margin-left: 21px;
         }
 
         @media (max-width: 468px) {
