improved some design

--- a/our-girls.html
+++ b/our-girls.html
@@ -197,12 +197,12 @@
 
     <nav class='navbar navbar-fixed-top'
         style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
-        <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a
-                href='tel:+66-842705334' style='color: #fff'>+66 842705334</a> - <a
+        <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a href='tel:+66-842705334'
+                style='color: #fff'><u>+66 842705334</u></a> - <a
                 href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i> whatsapp</a> | <a href=''
-                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i> Line</a> | <a href=''
-                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i> Wechat</a>
+                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
         </div>
     </nav>
     <nav id="navigation" class="navbar navbar-fixed-top" style="margin-top: 23px;">
@@ -371,9 +371,10 @@
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
                             <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/"><i
                                         class="fa fa-facebook" style='font-size: 30px;'></i></a></li>
-                            <li><a href="https://www.instagram.com/thehomespabymay"><i class="fa fa-instagram"
+                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl" target="_blank"><i class="fa fa-instagram"
                                         style='font-size: 30px;'></i></a></li>
-
+<li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i class="fa fa-twitter"
+            style='font-size: 30px;'></i></a></li>
                         </ul>
                     </div>
                     <!-- //.footer-social -->
