--- a/contact.html
+++ b/contact.html
@@ -136,16 +136,16 @@
     <link id="switch-style" href="" rel="stylesheet" type="text/css">
 
 
-    <nav class='navbar navbar-fixed-top'
-        style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
-        <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a
-                href='tel:+66-842705334' style='color: #fff'>+66 842705334</a> - <a
-                href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i> whatsapp</a> | <a href=''
-                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i> Line</a> | <a href=''
-                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i> Wechat</a>
-        </div>
-    </nav>
+<nav class='navbar navbar-fixed-top'
+    style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
+    <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a href='tel:+66-842705334'
+            style='color: #fff'><u>+66 842705334</u></a> - <a
+            href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
+            style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
+            style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
+            style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
+    </div>
+</nav>
     <nav id="navigation" class="navbar navbar-fixed-top" style="margin-top: 23px;">
 
         <div class="container">
@@ -231,9 +231,9 @@
                             <div class="xs-margin-7 xs-no-margin-bottom xs-no-margin-rl text-center">
                                 <i class="fa fa-envelope-o opacity-6 text-gray title-extra-large"></i>
                                 <p
-                                    class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                    General Enqueries<br><a href='emailto:booking@outcallmassagespattaya.com'
-                                        style='color: #000'>booking@outcallmassagespattaya.com</a></p>
+                                    class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium">
+                                    GENERAL ENQUERIES<br><a href='mailto:booking@outcallmassagespattaya.com'
+                                        style='color: #000'><u>booking@outcallmassagespattaya.com</u></a></p>
                             </div>
                             <!-- //.xs-margin-7 -->
                         </div>
@@ -244,7 +244,7 @@
                                 <i class="fa fa-phone opacity-6 text-gray title-extra-large"></i>
                                 <p
                                     class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                    Call Us Today<br><a href='tel:+66-8842705334' style='color: #000'>+66 842705334</a>
+                                    Call Us Today<br><a href='tel:+66-8842705334' style='color: #000'><u>+66 842705334</u></a>
                                 </p>
                             </div>
                             <!-- //.xs-margin-7 -->
@@ -294,7 +294,7 @@
         <br>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62219.97386694036!2d100.889624!3d12.923888!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ec9f3c54db95d93!2sSensational%20Outcall%20Massage%20Pattaya!5e0!3m2!1sen!2sus!4v1592291195717!5m2!1sen!2sus"
-            width="1170" height="450" frameborder="0" style="border:0;margin-left: 93px;margin-bottom: -140px;"
+            width="90%" height="450" frameborder="0" style="border:0;margin-left: 93px;margin-bottom: -140px;"
             allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- //.container -->
     </section>
@@ -336,9 +336,11 @@
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
                             <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/"><i
                                         class="fa fa-facebook" style='font-size: 30px;'></i></a></li>
-                            <li><a href="https://www.instagram.com/thehomespabymay"><i class="fa fa-instagram"
+                            <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl" target="_blank"><i class="fa fa-instagram"
                                         style='font-size: 30px;'></i></a></li>
 
+                                        <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i class="fa fa-twitter"
+                                                    style='font-size: 30px;'></i></a></li>
                         </ul>
                     </div>
                     <!-- //.footer-social -->
