--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
             .spaimg {
                 margin-top: 120px;
+                width:35%;
 
             }
 
@@ -143,11 +144,11 @@
     <nav class='navbar navbar-fixed-top'
         style='background-color: black; color: #fff;padding:5px;margin:0;left:0;right:0;font-size: 1.8rem;min-height: 30px;'>
         <div class='textcc'> <span style='color: yellow;font-weight: bold;'>Book Now</span> : <a
-                href='tel:+66-842705334' style='color: #fff'>+66 842705334</a> - <a
+                href='tel:+66-842705334' style='color: #fff'><u>+66 842705334</u></a> - <a
                 href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i> whatsapp</a> | <a href=''
-                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i> Line</a> | <a href=''
-                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i> Wechat</a>
+                style='color: #fff'><i class="fa fa-whatsapp" aria-hidden="true"></i><u>whatsapp</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-commenting-o" aria-hidden="true"></i><u> Line</u></a> | <a href=''
+                style='color: #fff'><i class="fa fa-weixin" aria-hidden="true"></i><u> Wechat</u></a>
         </div>
     </nav>
     <nav id="navigation" class="navbar navbar-fixed-top" style="margin-top: 23px;">
@@ -196,8 +197,7 @@
 
     <section style="background: url('/assets/images/bannerimg.png');
     background-size: cover; background-repeat: no-repeat;
-    "
-        class="height-100 no-padding overflow-hidden width-100 ">
+    "class="height-100 no-padding overflow-hidden width-100 ">
     
         <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
@@ -215,9 +215,7 @@
                         </div>
                         <div class='col-md-10'>
                             <h2
-                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding
-                            
-                                ">
+                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
                                 <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
                             <h2
@@ -855,14 +853,14 @@
 
                                 &nbsp; <i class="fa fa-phone text-black"></i>
 
-                                : <a href='tel:+66-8842705334' style='color: #000'>+66 842705334</a>, avaliable on - <a
+                                : <a href='tel:+66-8842705334' style='color: #000'><u>+66 842705334</u></a>, avaliable on - <a
                                     href='https://api.whatsapp.com/send?phone=66842705334&text=Hi%20Sensational%20Home%20Spa!%20Please%20provide%20me%20with%20more%20information%20about%20services.'
-                                    style='color: #000'><i class="fa fa-whatsapp" aria-hidden="true"></i> whatsapp</a> |
-                                <i class="fa fa-commenting-o" aria-hidden="true"></i> Line | <i class="fa fa-weixin"
-                                    aria-hidden="true"></i> Wechat </p>
+                                    style='color: #000'><i class="fa fa-whatsapp" aria-hidden="true"></i> <u>whatsapp</u></a> |
+                                <i class="fa fa-commenting-o" aria-hidden="true"></i> <u>Line</u> | <i class="fa fa-weixin"
+                                    aria-hidden="true"></i> <u>Wechat</u> </p>
                             <p class="margin-3 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large"
                                 style='font-size:2rem ;'><i class="fa fa-envelope-o text-black"></i>: <a
-                                    href='emailto:booking@outcallmassagespattaya.com' style='color: #000'>booking@outcallmassagespattaya.com</a></p>
+                                    href='mailto:booking@outcallmassagespattaya.com' style='color: #000'><u>booking@outcallmassagespattaya.com</u></a></p>
                         </div>
 
 
@@ -916,9 +914,9 @@
                         <div class="xs-margin-7 xs-no-margin-bottom xs-no-margin-rl text-center">
                             <i class="fa fa-envelope-o opacity-6 text-gray title-extra-large"></i>
                             <p
-                                class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                General Enqueries<br><a href="mailto:booking@outcallmassagespattaya.com"
-                                    style='color: #000'>booking@outcallmassagespattaya.com</a></p>
+                                class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium ">
+                                GENERAL ENQUERIES<br><a href="mailto:booking@outcallmassagespattaya.com"
+                                    style='color: #000'><u>booking@outcallmassagespattaya.com</u></a></p>
                         </div>
                         <!-- //.xs-margin-7 -->
                     </div>
@@ -929,7 +927,7 @@
                             <i class="fa fa-phone opacity-6 text-gray title-extra-large"></i>
                             <p
                                 class="font-family-alt margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 text-medium text-uppercase">
-                                Call Us Today<br><a href='tel:+66-8842705334' style='color: #000'>+66 842705334</a></p>
+                                Call Us Today<br><a href='tel:+66-8842705334' style='color: #000'><u>+66 842705334</u></a></p>
                         </div>
                         <!-- //.xs-margin-7 -->
                     </div>
@@ -997,8 +995,7 @@
                 <div itemscope="" itemtype="http://schema.org/Book">
                     <div itemscope="" itemprop="aggregateRating" itemtype="http://schema.org/AggregateRating">
                         <meta itemprop="itemReviewed" content="Sensational Outcall Massage Pattaya">
-                        <div class="my-stars" style="
-                color: #fad000;
+                        <div class="my-stars" style="color: #fad000;
                 text-align: center;
             "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
                                 class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
@@ -1016,10 +1013,12 @@
             <div class="col-sm-8">
                 <div class="footer-social">
                     <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-                        <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/"><i
+                        <li><a href="https://www.facebook.com/Sensational-Home-Spa-by-may-100280938161149/" target="_blank"><i
                                     class="fa fa-facebook" style='font-size: 30px;'></i></a></li>
-                        <li><a href="https://www.instagram.com/thehomespabymay"><i class="fa fa-instagram"
+                        <li><a href=" https://instagram.com/sensational_outcall_massage_?igshid=1k52d5297ngwl" target="_blank"><i class="fa fa-instagram"
                                     style='font-size: 30px;'></i></a></li>
+                                    <li><a href=" https://mobile.twitter.com/pattayaoutcall" target="_blank"><i
+                                                class="fa fa-twitter" style='font-size: 30px;'></i></a></li>
 
                     </ul>
                 </div>
