--- a/index.html
+++ b/index.html
@@ -222,9 +222,7 @@
                             </h2>
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                GET PROFESSIONAL AND BEST BODY SPA/MASSAGE IN JUST ONE CLICK BY SITTING AT HOME/HOTEL AT
-                                PATTAYA AND FEEL THE BEST EXPERIENCE OF AUTHENTIC THAI MASSAGE BY OUR TRAINED AND
-                                PROFESSIONAL THERAPIST.
+                                GET the professional and best body massage in just one click by sitting at your hotel room or home and feel the best experience of authentic body massages in pattaya by our trained and beautiful therapist.
                             </h2>
                             <a href="/gallery.html"
                                 class="page-scroll btn btn-base-color sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl ">Gallery</a>
