--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
                         <li><a href="thai-massage-pattaya.html" class="page-scroll">thai massage</a></li>
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
-                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="our-therapist.html" class="page-scroll">Our therapist</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
