--- a/sitemap.html
+++ b/sitemap.html
@@ -174,7 +174,7 @@
         </li>
         <li class="lpage">
           <a
-            href="https://outcallmassagespattaya.com/our-girls.html"
+            href="https://outcallmassagespattaya.com/our-therapist.html"
             title="Beautiful Girls Massage in Pattaya | Sexy &amp; Hot Massages in Pattaya"
             >Beautiful Girls Massage in Pattaya | Sexy & Hot Massages in
             Pattaya</a
