--- a/our-therapist.html
+++ b/our-therapist.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/spalogo.svg" />
     <meta property="og:type" content="Outcall Massage Pattaya" />
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://outcallmassagespattaya.com/our-girls.html" />
+    <link rel="canonical" href="https://outcallmassagespattaya.com/our-therapist.html" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description"
         content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
@@ -236,7 +236,7 @@
                         <li><a href="thai-massage-pattaya.html" class="page-scroll">thai massage</a></li>
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
-                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="our-therapist.html" class="page-scroll">Our therapist</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="contact.html" class="page-scroll">Contact</a></li>
 
@@ -262,16 +262,30 @@
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h1
-                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
-                        Beautifull Pattaya Girls by Sensational Outcall Massage Pattaya</h1>
+                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style="font-size: 6em;"
+                        >
+                        Outcall Massage therapist</h1>
 
+<br/><br />
+                        <h2 class="font-family-alt  letter-spacing-2 text-uppercase text-uppercase xs-title-small title-medium "
+                        style="font-size: 20px !important;"  
+                        >
+                Looking for an outcall massage therapist near you ??
+                        </h2>
+<br/>
+                        <p class="text-uppercase font-weight-600">Tired to goo out ?? Looking for an outcall massage therapist near you ?</p>
 
+                        <p>Sensational Outcall Massage Pattaya offers you best & professional massage therapist at your own place.Get the best massage in just one click by sitting at your hotel room or home by our beautiful therapist available 24 hours through-out pattaya city & near by areas.</p>
+                        <p>Book us now & enjoy the best authentic massage at you door step our beautiful & friendly therapist makes your time more special with complete privacy. Our therapist are having experience of minimum 3 years in different types of massages </p>
+                        <p>Every therapist at sensational outcall massage is required to meet stringent selection criteria.We choose therapist by their certification, experience & looks. Our therepist gone through their complete body check-up & different tests in every 3 months which ensures complete safety of our customers.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                       
+                       <p>
                         <i>We offers you bulk of beautiful Pattaya girls and u can choose girl of your choice and make
-                            your time more special. Outcall massages pattaya provides you beautiful lady massage
-                            services at your doorstep. Beautiful lady will reach your destination in about 15-30 minutes
+                            your time more special.Beautiful lady will reach your destination in about 15-30 minutes
                             according to distance and traffic. Our beautifull and experienced therapist provides you
-                            complete satisfaction and makes your time more special.Their magical fingers revitalize your
+                            complete satisfaction and Their magical fingers revitalize your
                             mind body and soul.</i></p>
 
                     <!-- <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
@@ -291,7 +305,7 @@
             <div class="row">
 
 
-                <h3 style="text-align: center;">OUR GIRLS</h3>
+                <h3 style="text-align: center;">Our therapist</h3>
                 <br>
                 <br>
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
