--- a/services.html
+++ b/services.html
@@ -157,7 +157,7 @@
                         <li><a href="thai-massage-pattaya.html" class="page-scroll">thai massage</a></li>
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
-                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="our-therapist.html" class="page-scroll">Our therapist</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
@@ -190,7 +190,7 @@
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Sensational outcall massage pattaya offers you best massage therapist in pattaya.our all therapist are having minimum experience of 3 years in different types of massages.we offer you beautiful & trained massage therapist who provide you best massage in pattaya at a comfort of your own hotel room or home. Our therapist are ready to serve you 24 hours at your own place.our services available through-out pattaya city and near by areas.stay at your comfort zone and book the best massage theapist near you.</p>
                     <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
-                        <b>Types of avaliable expert outcall massage services -</b>
+                        <b>Types of available expert outcall massage services -</b>
                     </h1>
                     <!-- <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
