content changes done

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
                             <h2
-                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
+                                class="font-family-alt letter-spacing-1 margin-3 text-uppercase font-weight-500 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
                                 GET the professional and best body massage in just one click by sitting at your hotel room or home and feel the best experience of authentic body massages in pattaya by our trained and beautiful therapist.
                             </h2>
                             <a href="/gallery.html"
