--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="#page-top">
                         <img class="logo-navbar-dark img-fluid" src="assets/images/logo/spalogo.svg"
-                            alt="mays home spa logo" style='height: 80px'>
+                            alt="Best Outcall massage pattaya" style='height: 80px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/spalogo.svg"
-                            alt="mays home spa logo" style='height: 80px'>
+                            alt="Best Outcall massage pattaya" style='height: 80px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
@@ -984,6 +984,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <div style="display:flex; justify-content: center;">
+                <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee"
+                style="width: 11em" />
+                </div>
                 <h3
                     class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
                     Sensational Outcall Massage Pattaya</h3>
