--- a/services.html
+++ b/services.html
@@ -353,7 +353,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="width: 11em" />
+                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="width: 13rem" />
                     </div>
                     <h3
                         class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
