logo issue solved

--- a/index.html
+++ b/index.html
@@ -986,7 +986,8 @@
             <div class="col-md-12">
                 <div style="display:flex; justify-content: center;">
                 <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee"
-                style="width: 13rem" />
+                class="img-fluid"
+                style="height: 15rem" />
                 </div>
                 <h3
                     class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
