--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -257,9 +257,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="width: 13rem" 
+                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="height: 15rem" 
                         
-                        className="img-fluid"/>
+                        class="img-fluid"/>
                     </div>
                     <h3
                         class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
