--- a/services.html
+++ b/services.html
@@ -353,8 +353,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="width: 13rem" 
-                        className="img-fluid"
+                        <img src="/assets/footer/satisfaction.png" alt="100 percent satisfaction gurantee" style="height: 15rem" 
+                        class="img-fluid"
                         />
                     </div>
                     <h3
