--- a/our-therapist.html
+++ b/our-therapist.html
@@ -309,37 +309,37 @@
                 <div class='row'>
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a href="assets/images/Yukii.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/Yukii.png" class="zoom img-fluid " alt="">
+                        <img src="assets/images/Yukii.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a href="assets/images/Mew.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/Mew.png" class="zoom img-fluid " alt="">
+                        <img src="assets/images/Mew.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a href="assets/images/tim.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/tim.png" class="zoom img-fluid " alt="">
+                        <img src="assets/images/tim.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a href="assets/images/saa.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/saa.png" class="zoom img-fluid " alt="">
+                        <img src="assets/images/saa.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <a href="assets/images/patty.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/patty.png" class="zoom img-fluid " alt="">
+                        <img src="assets/images/patty.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
     <a href="assets/images/Pam.png" class="fancybox" rel="ligthbox">
-        <img src="assets/images/Pam.png" class="zoom img-fluid " alt="">
+        <img src="assets/images/Pam.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
     </a>
 </div>
 
