--- a/index.html
+++ b/index.html
@@ -833,6 +833,22 @@
                 </div>
 
 
+                <div class="features-box col-sm-6 col-md-2 xs-margin-5 xs-no-margin-bottom xs-no-margin-rl ">
+                    <div class="position-relative width-100">
+                        <div class="position-relative">
+                            <!-- Triangle -->
+                            <img src="assets/images/Am.png" class='img-fluid'
+                                alt="Outcall massage therapist at sensational outcall massage pattaya" style="width: 100%;">
+                        </div>
+                        <!-- //.position-relative -->
+                
+                        <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
+                            <span
+                                class="display-block font-family-alt font-weight-600 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">Am</span>
+                        </div>
+                    </div> <!-- //.position-relative -->
+                </div>
+
                 
 
                 <!-- //Features Box Style v4 End -->
