--- a/our-therapist.html
+++ b/our-therapist.html
@@ -132,7 +132,9 @@
             margin-top: 85px;
         }
 
-
+img{
+    object-fit:cover !important;
+}
         img.zoom {
             width: 100%;
             border-radius: 5px;
@@ -307,7 +309,9 @@
                 <br>
                 <br>
                 <div class='row'>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb"
+            
+                >
                     <a href="assets/images/Yukii.png" class="fancybox" rel="ligthbox">
                         <img src="assets/images/Yukii.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
@@ -338,7 +342,7 @@
                 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-    <a href="assets/images/Pam.png" class="fancybox" rel="ligthbox">
+    <a href="assets/images/pamsquare.png" class="fancybox" rel="ligthbox">
         <img src="assets/images/Pam.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
     </a>
 </div>
@@ -346,6 +350,12 @@
 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
     <a href="assets/images/rose.png" class="fancybox" rel="ligthbox">
         <img src="assets/images/rose.png" class="zoom img-fluid " alt="">
+    </a>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+    <a href="assets/images/Am.png" class="fancybox" rel="ligthbox">
+        <img src="assets/images/Am.png" class="zoom img-fluid " alt="">
     </a>
 </div>
 </div>
