--- a/our-therapist.html
+++ b/our-therapist.html
@@ -394,11 +394,12 @@ img{
             "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
                                     class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i
                                     class="fa fa-star final-star"></i></div>
-                            <p class="aggRatings" style="
-                text-align: center;
+                            <div class='text-center'>
+                            <span class="aggRatings"
             ">Rated <span itemprop="ratingValue">4.7</span>/<span itemprop="bestRating">5</span> Based on <span
-                                    itemprop="reviewCount">74</span> Verified Ratings</p>
+                                    itemprop="reviewCount">74</span> Verified Ratings</span>
                             <meta itemprop="worstRating" content="1">
+                            </div>
                         </div>
                     </div>
                 </div>
