--- a/our-therapist.html
+++ b/our-therapist.html
@@ -313,50 +313,50 @@ img{
                 <br>
                 <div class='row'>
                 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-                    <a href="assets/images/Yukii.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/Yukii.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+                    <a href="assets/therapist/am.jpg">
+                        <img src="assets/therapist/am.jpg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-                    <a href="assets/images/Mew.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/Mew.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+                    <a href="assets/therapist/mew.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="assets/therapist/mew.jpeg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-                    <a href="assets/images/tim.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/tim.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+                    <a href="assets/therapist/pam.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="assets/therapist/pam.jpeg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-                    <a href="assets/images/saa.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/saa.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+                    <a href="assets/therapist/patty.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="assets/therapist/patty.jpeg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-                    <a href="assets/images/patty.png" class="fancybox" rel="ligthbox">
-                        <img src="assets/images/patty.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+                    <a href="assets/therapist/rose.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="assets/therapist/rose.jpeg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
                     </a>
                 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-    <a href="assets/images/pamsquare.png" class="fancybox" rel="ligthbox">
-        <img src="assets/images/Pam.png" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
+    <a href="assets/therapist/saa.jpeg" class="fancybox" rel="ligthbox">
+        <img src="assets/therapist/saa.jpeg" class="zoom img-fluid " alt="Outcall massage therapist at sensational outcall massage pattaya">
     </a>
 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-    <a href="assets/images/rose.png" class="fancybox" rel="ligthbox">
-        <img src="assets/images/rose.png" class="zoom img-fluid " alt="">
+    <a href="assets/therapist/tim.jpeg" class="fancybox" rel="ligthbox">
+        <img src="assets/therapist/tim.jpeg" class="zoom img-fluid " alt="">
     </a>
 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-12 thumb">
-    <a href="assets/images/Am.png" class="fancybox" rel="ligthbox">
-        <img src="assets/images/Am.png" class="zoom img-fluid " alt="">
+    <a href="assets/therapist/yukii.jpeg" class="fancybox" rel="ligthbox">
+        <img src="assets/therapist/yukii.jpeg" class="zoom img-fluid " alt="">
     </a>
 </div>
 </div>
