--- a/our-therapist.html
+++ b/our-therapist.html
@@ -8,11 +8,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Beautiful Lady Massage Services | Sexy & Hot Girls Massages in Pattaya</title>
+    <title>Outcall Massage Therapist Near You |24 Hours Massage Therapist in Pattaya</title>
     <meta name="description"
-        content="Call us at +66 842705334 and Beautiful lady massage services in pattaya now. We have the list of Hot and sexy girls who provide you Best Sexual body to body massages in pattaya">
+        content="Sensational outcall massage Pattaya offers you best outcall massage therapist at your doorstep available through-out Pattaya city & near by areas. Call or sms +66 84270-5334.">
     <meta name="keywords"
-        content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
+        content="Outcall massgae therapist near me">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:url" content="https://outcallmassagespattaya.com/" />
