--- a/our-therapist.html
+++ b/our-therapist.html
@@ -275,11 +275,8 @@ img{
                         >
                         Outcall Massage therapist</h1>
 
-<br/><br />
-                        
-<br/>
-<h2 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-style='padding-top: 50px;'>TIRED TO GOO OUT ?? LOOKING FOR AN OUTCALL MASSAGE THERAPIST NEAR YOU ?</h2>
+
+<h2 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small" style="padding-top: 50px;margin-bottom: 18px;">TIRED TO GOO OUT ?? LOOKING FOR AN OUTCALL MASSAGE THERAPIST NEAR YOU ?</h2>
 
                         <p class="text-gray-dark-2">Sensational Outcall Massage Pattaya offers you best & professional massage therapist at your own place.Get the best massage in just one click by sitting at your hotel room or home by our beautiful therapist available 24 hours through-out pattaya city & near by areas.</p>
                         <p class="text-gray-dark-2">Book us now & enjoy the best authentic massage at you door step our beautiful & friendly therapist makes your time more special with complete privacy. Our therapist are having experience of minimum 3 years in different types of massages </p>
