--- a/our-therapist.html
+++ b/our-therapist.html
@@ -366,7 +366,7 @@ img{
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.webp" alt="100 percent satisfaction gurantee"
+                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee"
                         class="img-fluid"
                         style="height: 15rem" />
                     </div>
