--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -258,7 +258,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div style="display:flex; justify-content: center;">
-                        <img src="/assets/footer/satisfaction.webp" alt="100 percent satisfaction gurantee" style="height: 15rem" 
+                        <img src="/assets/footer/satisfaction.jpg" alt="100 percent satisfaction gurantee" style="height: 15rem" 
                         class="img-fluid"
                         />
                     </div>
