--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </nav>
     <!-- //Navigation End -->
 
-    <section style="background: url('/assets/images/banner.jpg');
+    <section style="background: url('/assets/images/Banner.jpg');
     background-size: cover; background-repeat: no-repeat;
     "class="height-100 no-padding overflow-hidden width-100 ">
     
